# grpc-sui

./: .gitignore  Cargo.toml  README.md  build.rs
contract/metastore/: Move.toml
contract/metastore/sources/: metastore.move
contract/metastore/tests/: metastore_tests.move
proto/: model.proto
src/: server.rs  service_index.rs
src/client/: admin.rs  client.rs  rest_jwt.rs
src/model/: events.rs  mod.rs  users.rs
